Moved sourceMap to tsconfig.base and added inlineSources=true

--- a/packages/react/tsconfig.redux.json
+++ b/packages/react/tsconfig.redux.json
@@ -2,8 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./lib/redux",
-    "declarationDir": "./lib",
-    "sourceMap": true,
+    "declarationDir": "./lib"
   },
   "files": [
     "./src/redux/index.ts"
