--- a/packages/vue/vue-vanilla/tsconfig.json
+++ b/packages/vue/vue-vanilla/tsconfig.json
@@ -11,10 +11,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
     "outDir": "./lib",
     "types": ["node", "vue", "mocha", "chai"],
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "exclude": ["node_modules", "lib"]
 }
